force-app/main/default/objects/CRM_Survey__c/CRM_Survey__c.object-meta.xml
<CustomObject>
    <description>Encuesta para clientes de automoviles relacionados en la cuenta.</description>
    <label>Encuesta best drive</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0000}</displayFormat>
        <label>Nombre de Encuesta</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Encuestas best drive</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>