force-app/main/default/objects/CRM_Survey__c/fields/CRM_Agencia__c.field-meta.xml
<CustomField>
    <fullName>CRM_Agencia__c</fullName>
    <formula>CRM_OpportunityNumber__r.Vitrina__r.Agencia__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agencia</label>
    <type>Text</type>
</CustomField>