force-app/main/default/objects/CRM_Survey__c/fields/CRM_BestDriveDate__c.field-meta.xml
<CustomField>
    <fullName>CRM_BestDriveDate__c</fullName>
    <label>Fecha de BestDrive</label>
    <type>Date</type>
</CustomField>