force-app/main/default/objects/CRM_Survey__c/fields/CRM_ClosedDateOpp__c.field-meta.xml
<CustomField>
    <fullName>CRM_ClosedDateOpp__c</fullName>
    <formula>CRM_OpportunityNumber__r.CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha de cierre</label>
    <type>Date</type>
</CustomField>