force-app/main/default/objects/CRM_Survey__c/fields/CRM_Confort__c.field-meta.xml
<CustomField>
    <fullName>CRM_Confort__c</fullName>
    <label>Comodidad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Espacio interior</fullName>
            </value>
            <value>
                <fullName>Control al conducir</fullName>
            </value>
            <value>
                <fullName>Tecnologia y accesorios</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>