force-app/main/default/objects/CRM_Survey__c/fields/CRM_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>CRM_Cuenta__c</fullName>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Encuestas best drive</relationshipLabel>
    <relationshipName>Encuestas_best_drive</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>