force-app/main/default/objects/CRM_Survey__c/fields/CRM_Decision__c.field-meta.xml
<CustomField>
    <fullName>CRM_Decision__c</fullName>
    <label>¿Qué hace falta para tomar su decisión d</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Presupuesto/Aprobación de crédito</fullName>
            </value>
            <value>
                <fullName>Procesos de retoma</fullName>
            </value>
            <value>
                <fullName>Aprobación/Consulta con un familiar</fullName>
            </value>
            <value>
                <fullName>Explorar otros vehículos o marcas</fullName>
            </value>
            <value>
                <fullName>Otras</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>