force-app/main/default/objects/CRM_Survey__c/fields/CRM_DocumentNumber__c.field-meta.xml
<CustomField>
    <fullName>CRM_DocumentNumber__c</fullName>
    <formula>CRM_Cuenta__r.AM_Numero_de_documento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Número de documento</label>
    <type>Text</type>
</CustomField>