force-app/main/default/objects/CRM_Survey__c/fields/CRM_HowSatisfy__c.field-meta.xml
<CustomField>
    <fullName>CRM_HowSatisfy__c</fullName>
    <label>¿Cuán satisfecho está con la prueba?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>