force-app/main/default/objects/CRM_Survey__c/fields/CRM_OpportunityNumber__c.field-meta.xml
<CustomField>
    <fullName>CRM_OpportunityNumber__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>No. de oportunidad</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Encuestas best drive</relationshipLabel>
    <relationshipName>Encuestas_best_drive</relationshipName>
    <type>Lookup</type>
</CustomField>