force-app/main/default/objects/CRM_Survey__c/fields/CRM_Other__c.field-meta.xml
<CustomField>
    <fullName>CRM_Other__c</fullName>
    <label>Otras</label>
    <length>100</length>
    <type>Text</type>
</CustomField>