force-app/main/default/objects/CRM_Survey__c/fields/CRM_OtherReason__c.field-meta.xml
<CustomField>
    <fullName>CRM_OtherReason__c</fullName>
    <label>Otro</label>
    <length>100</length>
    <type>Text</type>
</CustomField>