force-app/main/default/objects/CRM_Survey__c/fields/CRM_Performance__c.field-meta.xml
<CustomField>
    <fullName>CRM_Performance__c</fullName>
    <label>Desempeño</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cilindraje del motor</fullName>
            </value>
            <value>
                <fullName>Trasmisión</fullName>
            </value>
            <value>
                <fullName>Caballos de fuerza</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>