force-app/main/default/objects/CRM_Survey__c/fields/CRM_Phone__c.field-meta.xml
<CustomField>
    <fullName>CRM_Phone__c</fullName>
    <formula>CRM_Cuenta__r.PersonMobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Telefono</label>
    <type>Text</type>
</CustomField>