force-app/main/default/objects/CRM_Survey__c/fields/CRM_Quality__c.field-meta.xml
<CustomField>
    <fullName>CRM_Quality__c</fullName>
    <label>Calidad &amp; durabilidad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Materiales del habitáculo</fullName>
            </value>
            <value>
                <fullName>Programa de garantías</fullName>
            </value>
            <value>
                <fullName>Ingenieria Honda</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>