force-app/main/default/objects/CRM_Survey__c/fields/CRM_Reasons__c.field-meta.xml
<CustomField>
    <fullName>CRM_Reasons__c</fullName>
    <label>Por favor seleccione motivo de respuesta</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CRM_HowSatisfy__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Atención del asesor</fullName>
            </value>
            <value>
                <fullName>Disponibilidad del vehículo</fullName>
            </value>
            <value>
                <fullName>Incumplimiento en la cita programada</fullName>
            </value>
            <value>
                <fullName>Explicación del producto</fullName>
            </value>
            <value>
                <fullName>Otras</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>