force-app/main/default/objects/CRM_Survey__c/fields/CRM_Security__c.field-meta.xml
<CustomField>
    <fullName>CRM_Security__c</fullName>
    <label>Protección &amp; seguridad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Carrocería con deformación inteligente ACE</fullName>
            </value>
            <value>
                <fullName>VSA/EBO/ESS/TPMS/EBA/HSA/HDC</fullName>
            </value>
            <value>
                <fullName>Honda Sensing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>