force-app/main/default/objects/CRM_Survey__c/fields/CRM_Vehiculo_empleado_para_la_prueba__c.field-meta.xml
<CustomField>
    <fullName>CRM_Vehiculo_empleado_para_la_prueba__c</fullName>
    <label>Vehiculo empleado para la prueba</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CITY LX</fullName>
            </value>
            <value>
                <fullName>PILOT</fullName>
            </value>
            <value>
                <fullName>CR-V</fullName>
            </value>
            <value>
                <fullName>WR-V</fullName>
            </value>
            <value>
                <fullName>HR-V</fullName>
            </value>
            <value>
                <fullName>Otro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>