force-app/main/default/objects/CRM_Survey__c/fields/CRM_Won__c.field-meta.xml
<CustomField>
    <fullName>CRM_Won__c</fullName>
    <formula>IF(TEXT(CRM_OpportunityNumber__r.StageName )=&quot;PU&quot;,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ganada</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>