force-app/main/default/objects/CRM_Survey__c/validationRules/SO_RV002_Encuesta_Otras2.validationRule-meta.xml
<ValidationRule>
    <fullName>SO_RV002_Encuesta_Otras2</fullName>
    <active>true</active>
    <description>Debe indicar cual es la otra opcion</description>
    <errorConditionFormula>AND(
TEXT(CRM_Decision__c)=&quot;Otras&quot;,
ISBLANK(CRM_OtherReason__c)
)</errorConditionFormula>
    <errorDisplayField>CRM_Decision__c</errorDisplayField>
    <errorMessage>Debe indicar cual es la otra opcion</errorMessage>
</ValidationRule>